Collapse Button offset Fix.

--- a/client/scss/vertical-split/_vertical-split.scss
+++ b/client/scss/vertical-split/_vertical-split.scss
@@ -23,14 +23,23 @@
   border: none;
   display: block;
   margin: 15px auto 0;
-  width: 24px;
-  height: 24px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  padding: 0px;
+  padding-left: 10px;
+
+  @media (max-width: $break-point-tablet) {
+    padding: 0;
+  }
+
   svg {
     stroke: $brand-color;
     &.plus-icon {
       transform: rotate(0);
       transition: all 0.4s ease;
     }
+
   }
 
   &:hover {
